--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -10,8 +10,8 @@ on:
       - '**'
 
 env:
-  REPOSITORY: andreysenov/firebase-tools
-  VERSION: 11.14.0
+  REPOSITORY: garox55/node-firebase
+  VERSION: 11.13.0
 
 jobs:
   firebase-tools:
